<resources>
    <string name="app_name">bd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_ra">RA:</string>
    <string name="text_nome">Nome:</string>
    <string name="text_dataNasc">Data de Nascimento:</string>
    <string name="text_email">e-mail:</string>
    <string name="text_enviar">Cadastrar</string>
</resources>